--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,7 @@
-<%= simple_form_for @article do |f| %>
-	<%= f.input :title %>
-	<%= f.input :body %>
-	<%= f.button :submit %>
+<%= form_with(model: @article) do |f| %>
+	<%= f.label :title %></br>
+	<%= f.text_field :title %></br>
+	<%= f.label :body %></br>
+	<%= f.text_area :body %></br>
+	<%= f.submit 'Create' %>
 <% end %>
