--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,7 @@
-<h1>BRUH ZONE</h1>
+<h1>Articles</h1>
+
+<%= link_to 'New Article', new_article_path %></br>
+<%= link_to "Show articles", articles_path, remote: true %>
+
+<p><div id="content">
+</div></p>
