--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Show</h1>
 <h2><%= @article.title %></h2>
 <p><%= @article.body %></p>
-<% link_to 'Back', articles_path %>
+<p>Created: <%= time_ago_in_words(@article.created_at) %> ago.</p>
+<%= link_to 'Back', articles_path %>
