--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -9,9 +9,9 @@
 		<% @articles.each do |article| %>
 		<tr>			
 				<div class="article">
-					<th><%= link_to "#{article.title}", article_path(article) %></th>
+					<th><%= link_to "#{article.title}", article_path(article), remote: true %></th>
 					<th>Created <%= time_ago_in_words(article.created_at) %> ago.</th>
-					<th><%= link_to 'Edit', edit_article_path(article) %></th>
+					<th><%= link_to 'Edit', edit_article_path(article), remote: true %></th>
 					<th><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %></th>
 				</div>
 			</tr>
