--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,3 @@
 <h1>Show</h1>
-<h2><%= @article.title %></h2>
-<p><%= @article.body %></p>
-<p>Created: <%= time_ago_in_words(@article.created_at) %> ago.</p>
+<%= render 'article', article: @article %>
 <%= link_to 'Back', articles_path %>
