add notifications when article created/edited/deleted

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,11 +3,10 @@
 <%= link_to 'New Article', new_article_path, remote: true %></br>
 <%= link_to "Show articles", articles_path, remote: true %>
 
-<div id="content">
-</div>
+<div id="notification"></div>
 
-<div id="article">
-</div>
+<div id="content"></div>
 
-<div id="form">
-</div>
+<div id="article"></div>
+
+<div id="form"></div>
